# codex

./: .codespellrc  .gitignore  AGENTS.md  MODULE.bazel  Makefile  README.md  defs.bzl  justfile
codex-cli/: README.md  (+1 more)
codex-rs/core/: BUILD.bazel  Cargo.toml  config.schema.json  models.json
codex-rs/core/src/: api_bridge.rs  auth.rs  client.rs  client_anthropic.rs  client_common.rs  codex.rs  codex_delegate.rs  codex_delegate_tests.rs  codex_tests.rs  codex_thread.rs  compact.rs  connectors.rs  error.rs  exec.rs  exec_env.rs  exec_policy.rs  exec_tests.rs  external_agent_config.rs  features.rs  file_watcher.rs  hook_runtime.rs  hooks_executor.rs  landlock.rs  lib.rs  mcp_connection_manager.rs  mcp_tool_call.rs  model_provider_info.rs  original_image_detail.rs  path_utils.rs  project_doc.rs  provider_runtime.rs  realtime_conversation.rs  realtime_conversation_tests.rs  runtime_owner.rs  safety.rs  scheduled_tasks.rs  seatbelt.rs  seatbelt_platform_defaults.sbpl  shell.rs  shell_snapshot.rs  (+5 more)
codex-rs/core/src/agent/: agent_resolver.rs  control.rs  guards.rs  guards_tests.rs  memory.rs  mod.rs  role.rs
codex-rs/core/src/agent/builtins/: coordinator.toml  coordinator_prompt.md  plan.toml  verify.toml
codex-rs/core/src/auth/: external_bearer.rs
codex-rs/core/src/config/: config_tests.rs  edit.rs  hooks.rs  mod.rs  permissions.rs  permissions_tests.rs  profile.rs  service.rs  types.rs
codex-rs/core/src/config_loader/: mod.rs  tests.rs
codex-rs/core/src/context_manager/: history_tests.rs  normalize.rs
codex-rs/core/src/features/: legacy.rs
codex-rs/core/src/guardian/: approval_request.rs  mod.rs  review.rs  review_session.rs
codex-rs/core/src/memories/: phase2.rs  prompts.rs  tests.rs  usage.rs
codex-rs/core/src/models_manager/: collaboration_mode_presets.rs  manager.rs  model_info.rs
codex-rs/core/src/plugins/: installed_marketplaces.rs  manager.rs  manager_tests.rs  marketplace.rs  marketplace_remove.rs  mod.rs  store.rs
codex-rs/core/src/rollout/: policy.rs  recorder.rs
codex-rs/core/src/sandboxing/: macos_permissions.rs  mod.rs  mod_tests.rs
codex-rs/core/src/skills/: injection.rs  loader.rs  mod.rs  permissions.rs
codex-rs/core/src/state/: service.rs  session.rs  turn.rs
codex-rs/core/src/tasks/: mod.rs  review.rs
codex-rs/core/src/tools/: context.rs  context_tests.rs  events.rs  network_approval.rs  orchestrator.rs  registry.rs  router.rs  router_tests.rs  sandboxing.rs  spec.rs  spec_tests.rs
codex-rs/core/src/tools/code_mode/: runner.cjs
codex-rs/core/src/tools/handlers/: agent_jobs.rs  apply_patch.rs  cron.rs  dynamic.rs  mcp_resource.rs  mod.rs  multi_agents.rs  presentation_artifact.rs  request_permissions.rs  search_tool_bm25.rs  shell.rs  spreadsheet_artifact.rs  unified_exec.rs  view_image.rs
codex-rs/core/src/tools/js_repl/: kernel.js  mod.rs
codex-rs/core/src/tools/runtimes/: apply_patch.rs  mod.rs  shell.rs  unified_exec.rs
codex-rs/core/src/unified_exec/: async_watcher.rs  process.rs  process_manager.rs
codex-rs/core/src/zsh_exec_bridge/: mod.rs
codex-rs/core/tests/: permissions_glob_profiles.rs  responses_headers.rs
codex-rs/core/tests/common/: Cargo.toml  lib.rs  responses.rs  test_codex.rs
codex-rs/core/tests/suite/: abort_tasks.rs  agent_jobs.rs  agent_teams.rs  agent_websocket.rs  anthropic.rs  apply_patch_cli.rs  approvals.rs  cli_stream.rs  client.rs  client_websockets.rs  code_mode.rs  compact_resume_fork.rs  external_config_migration_notice.rs  hooks.rs  marketplace_remove.rs  memories.rs  mod.rs  model_info_overrides.rs  model_switching.rs  model_visible_layout.rs  models_cache_ttl.rs  permissions_messages.rs  personality.rs  plugins.rs  prompt_caching.rs  realtime_conversation.rs  remote_env.rs  remote_models.rs  request_permissions.rs  request_permissions_tool.rs  rmcp_client.rs  search_tool.rs  shell_command.rs  shell_serialization.rs  shell_snapshot.rs  skill_approval.rs  spawn_agent_description.rs  sqlite_state.rs  stream_error_allows_next_turn.rs  stream_no_completed.rs  (+7 more)
codex-rs/core/tests/suite/snapshots/: all__suite__compact__manual_compact_with_history_shapes.snap  all__suite__compact__manual_compact_without_prev_user_shapes.snap  all__suite__compact__mid_turn_compaction_shapes.snap  all__suite__compact__pre_sampling_model_switch_compaction_shapes.snap  all__suite__compact__pre_turn_compaction_context_window_exceeded_shapes.snap  all__suite__compact__pre_turn_compaction_including_incoming_shapes.snap  all__suite__compact__pre_turn_compaction_strips_incoming_model_switch_shapes.snap  all__suite__compact_remote__remote_compact_resume_restates_realtime_end_shapes.snap  all__suite__compact_remote__remote_manual_compact_restates_realtime_start_shapes.snap  all__suite__compact_remote__remote_manual_compact_with_history_shapes.snap  all__suite__compact_remote__remote_manual_compact_without_prev_user_shapes.snap  all__suite__compact_remote__remote_mid_turn_compaction_does_not_restate_realtime_end_shapes.snap  all__suite__compact_remote__remote_mid_turn_compaction_multi_summary_reinjects_above_last_summary_shapes.snap  all__suite__compact_remote__remote_mid_turn_compaction_shapes.snap  all__suite__compact_remote__remote_mid_turn_compaction_summary_only_reinjects_context_shapes.snap  all__suite__compact_remote__remote_pre_turn_compaction_context_window_exceeded_shapes.snap  all__suite__compact_remote__remote_pre_turn_compaction_failure_shapes.snap  all__suite__compact_remote__remote_pre_turn_compaction_including_incoming_shapes.snap  all__suite__compact_remote__remote_pre_turn_compaction_restates_realtime_end_shapes.snap  (+7 more)
codex-rs/github-webhook/: Cargo.toml
codex-rs/github-webhook/src/: lib.rs
codex-rs/hooks/: Cargo.toml
codex-rs/hooks/src/: legacy_notify.rs  lib.rs  registry.rs  types.rs  user_notification.rs
codex-rs/serve/: BUILD.bazel  Cargo.toml
codex-rs/serve/assets/web/: 404.html  index.html
codex-rs/serve/src/: lib.rs  live_runtime.rs  server.rs  telegram_bot.rs
codex-rs/serve/src/server/: telegram_worker.rs
codex-rs/v8-poc/: BUILD.bazel  Cargo.toml
codex-rs/v8-poc/src/: lib.rs
(+565 files in other folders)
