[package]
name = "codex-github-webhook"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "codex_github_webhook"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true, default-features = false, features = ["http1", "json", "tokio"] }
base64 = { workspace = true }
codex-core = { workspace = true }
codex-utils-absolute-path = { workspace = true }
hmac = "0.12.1"
jsonwebtoken = { workspace = true }
regex-lite = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["io-util", "macros", "process", "rt-multi-thread", "signal"] }
toml = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
pretty_assertions = { workspace = true }
