load("//:defs.bzl", "codex_rust_crate")

codex_rust_crate(
    name = "v8-poc",
    crate_name = "codex_v8_poc",
    # Keep the proof-of-concept crate buildable under Bazel, but skip its
    # unit test target from wildcard CI runs until rusty_v8's bundled libc++
    # stops conflicting with the LLVM toolchain's libc++ at link time.
    test_tags = ["manual"],
)

alias(
    name = "v8-poc-rusty-v8",
    actual = ":v8-poc",
)
